# agentic_tools

./: .containerignore  .gemini_commit_message_final_fix.txt  .gemini_commit_message_fix.txt  .gemini_commit_message_refactor.txt  .gitignore  .mega-linter.yml  1q  AGENTS.md  ARCHITECTURE_ADDENDUM.md  COMPLETE MULTI-AGENT MCP SYSTEM BLUEPRINT.md  Containerfile  EXPLORATION.md  GEMINI.md  IMPLEMENTATION.md  MANIFEST.in  MEMORY.md  PERSONAL_TOOLING.md  QDRANT.md  README.md  TODO.md  agentic-tools.toml  agentic_tools.toml  build.sh  commit.txt  config.yaml  explanation.txt  install.sh  linter.py  main.py  multi_agent_dev_team.py  mypy.ini  normalize_filenames.py  prompt.txt  proposed_plan.txt  pyproject.toml  qdrant_env.sh  requirements.txt  run_agents_manually.py  temp_run_approver.py  test_qdrant_write.py
.gemini/: settings.json
.qwen/: PROJECT_SUMMARY.md
conf/: agentic_tools.toml  mcp.toml  mcp.toml~
docs/: AGENTIC_TOOLS_BEST_PRACTICES.md  CODING_FOR_LLMs.md  CODING_STANDARDS.md  DESIGN_PRINCIPLES_GUIDE.md  DEVELOPMENT_GUIDE.md  FASTMCP.md  PROVIDERS_SDK.md  api_providers_python.md  complete-test-suite.py  execution-plan.md  fastmcp_documentation_guide.md  golden-rules-quick-ref.md  llm_limits.md  manifesto-example.md  mcp_design.drawio  mcp_design.drawio.xml  memory-implementation.md  memory_system_scientific_validation.csv  provider_schemas.md  providers_sdk.md  prune_memories.py  qdrant_memory.py  unified-manifesto.md
go-mcp/: Makefile  go.mod  go.sum
go-mcp/cmd/development-mcp/: main.go
go-mcp/cmd/leadership-mcp/: main.go
go-mcp/internal/command/: executor.go  executor_test.go
go-mcp/internal/config/: config.go  config_test.go
go-mcp/internal/nats/: client.go  client_test.go
go-mcp/internal/qdrant/: client.go  client_test.go
go-mcp/pkg/model/: chat.go  chat_test.go  doc.go  work_packet.go  work_packet_test.go
go-mcp/pkg/voting/: majority.go  majority_test.go
multi_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
path/to/data/: raft_state.json
src/: GEMINI.md  _api.py  _api.py~  agent.py  approver.py  approver.py~  base_agent.py  configurator.py  prompt_utils.py  qdrant_integration.py  readme_writer_tool.py  shell_tools.py
src/.qwen/: PROJECT_SUMMARY.md
src/agents/: agent.py  document_ingestor.py  test_agent.py  test_knowledge_base_agent.py
src/agents/prompts/: configuration_builder_prompt.txt
src/apis/: google_client.py  mistral_client.py
src/memory/: embedding_models.py  ingest_knowledge_bank.py  memory.py  models.py  prune_memories.py  qdrant_client_manager.py  qdrant_memory.py  reranker.py  retrieval_strategies.py  rfm_calculator.py  test_qdrant_memory.py
src/providers/: __init__.py  api_providers.py  provider_factory.py
src/scripts/: ingest_knowledge_bank.py
src/tools/: api_tools.py  qdrant_tools.py  shell_tools.py  test_shell_tools.py  test_tool.py  tool.py  validation_tools.py
src/utils/: content_extractor.py  document_processor.py  knowledge_augmentor.py  payload_builder.py  shell_utils.py  text_utils.py
src/workflows/: code_quality_enforcer.py
tests/: conftest.py  test_api.py  test_approver.py  test_approver_after_fixes.py  test_auth.py  test_configurator.py  test_google_integration.py  test_prompt_utils.py  test_readme_writer_tool.py  test_shell_tools.py
tests/agents/: test_agent.py  test_agent_errors.py
tests/memory/: test_qdrant_memory.py
tests/tools/: test_shell_tools.py  test_tool.py
