[project]
name = "multi-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "W", "F", "I", "C90", "N", "D"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D406", # Section name should end with a colon
    "D407", # Missing dashed underline after section header
    "D413", # Missing blank line after last section
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
known-first-party = ["src"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pep8-naming]
ignore-names = ["mcp", "cwd"]
